--- a/templates/common/base.html
+++ b/templates/common/base.html
@@ -27,6 +27,7 @@
 
     <script src="{% static 'js/jquery.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
-    <script src="{% static 'js/custom.js' %}"></script>
+    {% block customJS %} {% endblock customJS %}
+        
 </body>
 </html>
